@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.043.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.044.
 use strict;
 use warnings;
 
@@ -48,6 +48,7 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::MakeMaker::Awesome" => 0,
     "Dist::Zilla::Plugin::Manifest" => 0,
     "Dist::Zilla::Plugin::ManifestSkip" => 0,
+    "Dist::Zilla::Plugin::MetaConfig" => 0,
     "Dist::Zilla::Plugin::MetaJSON" => 0,
     "Dist::Zilla::Plugin::MetaNoIndex" => 0,
     "Dist::Zilla::Plugin::MetaProvides::Package" => 0,
@@ -64,6 +65,7 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::RunExtraTests" => 0,
     "Dist::Zilla::Plugin::ShareDir" => 0,
     "Dist::Zilla::Plugin::TemplateModule" => 0,
+    "Dist::Zilla::Plugin::Test::ReportPrereqs" => 0,
     "Dist::Zilla::Plugin::TestRelease" => 0,
     "Dist::Zilla::Plugin::UploadToCPAN" => 0,
     "Dist::Zilla::Role::MintingProfile::ShareDir" => 0,
@@ -74,9 +76,11 @@ my %WriteMakefileArgs = (
     "Scalar::Util" => 0
   },
   "TEST_REQUIRES" => {
+    "ExtUtils::MakeMaker" => 0,
+    "File::Spec" => 0,
     "Test::More" => "0.88"
   },
-  "VERSION" => "0.022",
+  "VERSION" => "0.023",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -108,6 +112,7 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::MakeMaker::Awesome" => 0,
   "Dist::Zilla::Plugin::Manifest" => 0,
   "Dist::Zilla::Plugin::ManifestSkip" => 0,
+  "Dist::Zilla::Plugin::MetaConfig" => 0,
   "Dist::Zilla::Plugin::MetaJSON" => 0,
   "Dist::Zilla::Plugin::MetaNoIndex" => 0,
   "Dist::Zilla::Plugin::MetaProvides::Package" => 0,
@@ -124,12 +129,15 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::RunExtraTests" => 0,
   "Dist::Zilla::Plugin::ShareDir" => 0,
   "Dist::Zilla::Plugin::TemplateModule" => 0,
+  "Dist::Zilla::Plugin::Test::ReportPrereqs" => 0,
   "Dist::Zilla::Plugin::TestRelease" => 0,
   "Dist::Zilla::Plugin::UploadToCPAN" => 0,
   "Dist::Zilla::Role::MintingProfile::ShareDir" => 0,
   "Dist::Zilla::Role::PluginBundle::Config::Slicer" => 0,
   "Dist::Zilla::Role::PluginBundle::Easy" => 0,
   "Dist::Zilla::Role::PluginBundle::PluginRemover" => 0,
+  "ExtUtils::MakeMaker" => 0,
+  "File::Spec" => 0,
   "Moose" => 0,
   "Scalar::Util" => 0,
   "Test::More" => "0.88"
