@@ -27,6 +27,7 @@ This is the plugin bundle that DBOOK uses. It is equivalent to:
  filename = README.pod
  location = root
  
+ [MetaConfig]
  [MetaProvides::Package]
  [Prereqs::FromCPANfile]
  [Git::Contributors]
@@ -68,6 +69,7 @@ This is the plugin bundle that DBOOK uses. It is equivalent to:
  commit_msg = Bump version
  [Git::Push]
  
+ [Test::ReportPrereqs]
  [Git::GatherDir]
  exclude_filename = INSTALL
  exclude_filename = LICENSE
