@@ -23,6 +23,7 @@ requires 'Dist::Zilla::Plugin::MakeMaker';
 requires 'Dist::Zilla::Plugin::MakeMaker::Awesome';
 requires 'Dist::Zilla::Plugin::Manifest';
 requires 'Dist::Zilla::Plugin::ManifestSkip';
+requires 'Dist::Zilla::Plugin::MetaConfig';
 requires 'Dist::Zilla::Plugin::MetaJSON';
 requires 'Dist::Zilla::Plugin::MetaNoIndex';
 requires 'Dist::Zilla::Plugin::MetaProvides::Package';
@@ -39,6 +40,7 @@ requires 'Dist::Zilla::Plugin::RewriteVersion';
 requires 'Dist::Zilla::Plugin::RunExtraTests';
 requires 'Dist::Zilla::Plugin::ShareDir';
 requires 'Dist::Zilla::Plugin::TemplateModule';
+requires 'Dist::Zilla::Plugin::Test::ReportPrereqs';
 requires 'Dist::Zilla::Plugin::TestRelease';
 requires 'Dist::Zilla::Plugin::UploadToCPAN';
 requires 'Dist::Zilla::Role::MintingProfile::ShareDir';
