@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Add [MetaConfig] and [Test::ReportPrereqs]
 
 0.022     2016-03-14 17:38:19 EDT
   - Use [RunExtraTests] instead of [ExtraTests], so xt/ tests will not be
